// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`endpointManager.endpoint get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "transfer.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://transfer.api.globus.org/v0.10/endpoint_manager/endpoint/c591c905-2674-4227-9d31-1ff9485945a7",
}
`;

exports[`endpointManager.endpoint getAccessList 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "transfer.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://transfer.api.globus.org/v0.10/endpoint_manager/endpoint/c591c905-2674-4227-9d31-1ff9485945a7/access_list",
}
`;

exports[`endpointManager.endpoint getHostedEndpoints 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "transfer.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://transfer.api.globus.org/v0.10/endpoint_manager/endpoint/c591c905-2674-4227-9d31-1ff9485945a7/hosted_endpoint_list",
}
`;

exports[`endpointManager.endpoint getMonitoredEndpoints 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "transfer.api.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://transfer.api.globus.org/v0.10/endpoint_manager/monitored_endpoints",
}
`;
